--- a/assets/css/details.css
+++ b/assets/css/details.css
@@ -50,6 +50,9 @@ section.team-name{
 }
 section.team-name .image img {
     border-radius: 12px;
+    background-color: transparent;
+    width: 99px;
+    height: 99px;
 }
 section.team-name span.name-club{
     background-color: transparent;
@@ -97,6 +100,7 @@ main{
     border-radius: 18px;
     width: 39.37px;
     height: 59.65px;
+    margin-top: 8px;
 }
 .player-container .player-num{
     display: flex;
